<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Violet_100"
    tools:context=".withdraw.WithdrawFragment">

    <include
        android:id="@+id/component_toolbar"
        layout="@layout/component_toolbar" />

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="@dimen/_400sdp"
        app:cardBackgroundColor="@color/Light_100"
        app:layout_constraintBottom_toBottomOf="parent"
        app:shapeAppearance="@drawable/round_shape"
        app:shapeAppearanceOverlay="@style/RoundedTopCorners"
        app:strokeColor="@color/Light_100">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/round_shape">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textFieldWithdrawInputLayout"
                style="@style/text_edit_style_material_new"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_46sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_marginEnd="@dimen/_16sdp"
                android:fontFamily="@font/inter"
                android:hint="@string/withdraw"
                android:inputType="number"
                android:maxLines="0"
                android:textColorHint="@color/Light_20"
                android:textSize="@dimen/_9ssp"
                app:boxBackgroundMode="outline"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/textFieldWithdraw"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/edit_field_round"
                    android:fontFamily="@font/inter"
                    android:inputType="number"
                    android:textColorHint="@color/Light_20"
                    android:textSize="@dimen/_9ssp" />

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textFieldWithdrawInputLayoutReason"
                style="@style/text_edit_style_material_new"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_46sdp"
                android:layout_marginTop="@dimen/_15sdp"
                android:layout_marginEnd="@dimen/_16sdp"
                android:fontFamily="@font/inter"
                android:hint="@string/reason_to_withdraw"
                android:inputType="number"
                android:maxLines="0"
                android:textColorHint="@color/Light_20"
                android:textSize="@dimen/_9ssp"
                app:boxBackgroundMode="outline"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textFieldWithdrawInputLayout">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/textFieldWithdrawReason"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/edit_field_round"
                    android:fontFamily="@font/inter"
                    android:inputType="number"
                    android:textColorHint="@color/Light_20"
                    android:textSize="@dimen/_9ssp" />

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.card.MaterialCardView
                android:id="@+id/cardDateView"
                style="@style/text_edit_style_material_new"
                android:layout_height="@dimen/_45sdp"
                android:layout_marginTop="@dimen/_15sdp"
                android:layout_marginEnd="@dimen/_15sdp"
                app:cardBackgroundColor="@color/Light_100"
                app:cardCornerRadius="@dimen/_12sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textFieldWithdrawInputLayoutReason"
                app:strokeColor="@color/Light_60">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/textViewSelectedDate"
                    style="@style/text_style_new"
                    android:layout_gravity="center"
                    android:text="@string/_15_02_2020"
                    app:layout_constraintBottom_toTopOf="@+id/buttonSelectDate"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent" />
            </com.google.android.material.card.MaterialCardView>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/buttonWithdrawAmount"
                style="@style/button_style"
                android:layout_width="match_parent"
                android:layout_marginEnd="@dimen/_20sdp"
                android:layout_marginBottom="@dimen/_20sdp"
                android:fontFamily="@font/inter_semibold"
                android:gravity="center"
                android:includeFontPadding="false"
                android:text="@string/request"
                android:textSize="@dimen/_14ssp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>
</androidx.constraintlayout.widget.ConstraintLayout>
