<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Violet_100"
    tools:context=".fragments.withdraw.WithdrawFragment">

    <include
        android:id="@+id/component_toolbar"
        layout="@layout/component_toolbar" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/_140sdp"
        android:background="@drawable/round_shape">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textFieldWithdrawInputLayout"
            style="@style/text_edit_style_material_new"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_46sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_marginEnd="@dimen/_16sdp"
            android:fontFamily="@font/inter"
            android:hint="@string/withdraw"
            android:inputType="number"
            android:maxLines="0"
            android:textColorHint="@color/Light_20"
            android:textSize="@dimen/_9ssp"
            app:boxCornerRadiusBottomEnd="@dimen/_13sdp"
            app:boxCornerRadiusBottomStart="@dimen/_13sdp"
            app:boxCornerRadiusTopEnd="@dimen/_13sdp"
            app:boxCornerRadiusTopStart="@dimen/_13sdp"
            app:boxStrokeColor="@color/Light_60"
            app:boxStrokeWidth="0.2dp"
            app:boxStrokeWidthFocused="1dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textFieldWithdraw"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/inter"
                android:inputType="number"
                android:textColorHint="@color/Light_20"
                android:textSize="@dimen/_9ssp" />

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textFieldWithdrawInputLayoutReason"
            style="@style/text_edit_style_material_new"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_46sdp"
            android:layout_marginTop="@dimen/_15sdp"
            android:layout_marginEnd="@dimen/_16sdp"
            android:fontFamily="@font/inter"
            android:hint="@string/TransactionID"
            android:inputType="number"
            android:maxLines="0"
            android:textColorHint="@color/Light_20"
            android:textSize="@dimen/_9ssp"
            app:boxCornerRadiusBottomEnd="@dimen/_13sdp"
            app:boxCornerRadiusBottomStart="@dimen/_13sdp"
            app:boxCornerRadiusTopEnd="@dimen/_13sdp"
            app:boxCornerRadiusTopStart="@dimen/_13sdp"
            app:boxStrokeColor="@color/Light_60"
            app:boxStrokeWidth="0.2dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textFieldWithdrawInputLayout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textFieldWithdrawReason"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/inter"
                android:inputType="text"
                android:textColorHint="@color/Light_20"
                android:textSize="@dimen/_9ssp" />

        </com.google.android.material.textfield.TextInputLayout>


        <androidx.cardview.widget.CardView
            android:id="@+id/cardDateView"
            style="@style/text_edit_style_material_new"
            android:layout_height="@dimen/_45sdp"
            android:layout_marginTop="@dimen/_15sdp"
            android:layout_marginEnd="@dimen/_15sdp"
            android:foreground="@drawable/dashed_border"
            app:cardBackgroundColor="@color/Light_100"
            app:cardCornerRadius="@dimen/_5sdp"
            app:cardElevation="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textFieldWithdrawInputLayoutReason"
            app:strokeColor="@color/Light_60"
            app:strokeWidth="1dp">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/textViewSelectedDate"
                style="@style/text_style_new"
                android:layout_gravity="center"
                android:text="@string/_15_02_2020"
                app:layout_constraintBottom_toTopOf="@+id/buttonSelectDate"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent" />
        </androidx.cardview.widget.CardView>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonWithdrawApproved"
            style="@style/button_style"
            android:layout_width="match_parent"
            android:layout_marginEnd="@dimen/_20sdp"
            android:layout_marginBottom="@dimen/_15sdp"
            android:fontFamily="@font/inter_semibold"
            android:gravity="center"
            android:includeFontPadding="false"
            android:text="@string/approved"
            android:textSize="@dimen/_14ssp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent" />


        <androidx.cardview.widget.CardView
            android:id="@+id/cardViewAttachment"
            style="@style/text_edit_attachment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_15sdp"
            android:layout_marginEnd="@dimen/_16sdp"
            android:foreground="@drawable/dashed_border"
            app:cardCornerRadius="@dimen/_5sdp"
            app:cardElevation="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardDateView">

            <ImageView
                android:id="@+id/imageViewAttachment"
                android:layout_width="@dimen/_40sdp"
                android:layout_height="@dimen/_40sdp"
                android:layout_marginStart="@dimen/_60sdp"
                android:layout_marginTop="@dimen/_3sdp"
                android:padding="@dimen/_10sdp"
                android:src="@drawable/attachmenticon" />

            <TextView
                android:id="@+id/textViewAttachment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_100sdp"
                android:layout_marginTop="@dimen/_12sdp"
                android:fontFamily="@font/inter"
                android:text="@string/add_attachment"
                android:textColor="@color/Light_20"
                android:textSize="@dimen/_12ssp" />

        </androidx.cardview.widget.CardView>


    </androidx.constraintlayout.widget.ConstraintLayout>
    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="0dp"
        android:layout_height="@dimen/_80sdp"
        android:layout_marginTop="@dimen/_16sdp"
        android:elevation="@dimen/_80sdp"
        android:indeterminateDrawable="@drawable/custom_progress_bar"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>
